Added date to copyright footer

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <!-- This is the footer! -->
 
   <footer>
-    &copy; <span>Casey Reed / Cool Dog</span>
+    &copy; <span>2016 Casey Reed / Cool Dog</span>
   </footer>
 </body>
 </html>
