Added a line to the Home nav

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <header>
     <ul>
-      <li>Home</li>
+      <li>Home is where your butt is</li>
       <li>About</li>
       <li>Links</li>
     </ul>
