Added some crappy styling with horrible coloring for each article

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <header>
     <ul>
       <li>Home</li>
-      <li>About</li>
-      <li>Links</li>
+      <a href="#article1"><li>Article 1</li></a>
+      <a href="#article2"><li>Article 2</li></a>
+      <a href="#article3"><li>Article 3</li></a>
     </ul>
   </header>
 
