--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <title>Cool Dog's Super Blog</title>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 </head>
 <body>
   
+
+
 <!-- Header / Nav -->
 
   <header>
